// Team Task Tracker — Prisma schema (MySQL)
// ER diagram: docs/er-diagram.png  |  Source DBML: docs/schema.dbml

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

// ────────────────── ENUMS ──────────────────

enum Role {
  ADMIN
  MANAGER
  MEMBER
}

enum Priority {
  LOW
  MEDIUM
  HIGH
}

enum TaskStatus {
  TODO
  IN_PROGRESS
  IN_REVIEW
  DONE
  BLOCKED
}

enum NotificationType {
  TASK_ASSIGNED
  TASK_STATUS_CHANGED
  TASK_DUE_SOON
}

// ────────────────── MODELS ──────────────────

model Organization {
  id        String   @id @default(uuid()) @db.Char(36)
  name      String   @db.VarChar(160)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  users    User[]
  projects Project[]

  @@map("organizations")
}

model User {
  id           String   @id @default(uuid()) @db.Char(36)
  orgId        String   @db.Char(36)
  email        String   @db.VarChar(160)
  passwordHash String   @db.VarChar(255)
  name         String   @db.VarChar(120)
  role         Role     @default(MEMBER)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  organization    Organization   @relation(fields: [orgId], references: [id], onDelete: Cascade)
  createdTasks    Task[]         @relation("TaskCreatedBy")
  assignedTasks   Task[]         @relation("TaskAssignee")
  createdProjects Project[]      @relation("ProjectCreatedBy")
  refreshTokens   RefreshToken[]
  notifications   Notification[]

  @@unique([orgId, email], name: "uq_users_org_email")
  @@index([orgId])
  @@map("users")
}

model Project {
  id          String   @id @default(uuid()) @db.Char(36)
  orgId       String   @db.Char(36)
  name        String   @db.VarChar(160)
  description String?  @db.Text
  createdById String   @db.Char(36)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  organization Organization @relation(fields: [orgId], references: [id], onDelete: Cascade)
  createdBy    User         @relation("ProjectCreatedBy", fields: [createdById], references: [id])
  tasks        Task[]

  @@index([orgId])
  @@index([createdById])
  @@map("projects")
}

model Task {
  id          String     @id @default(uuid()) @db.Char(36)
  projectId   String     @db.Char(36)
  title       String     @db.VarChar(200)
  description String?    @db.Text
  priority    Priority   @default(MEDIUM)
  status      TaskStatus @default(TODO)
  assigneeId  String?    @db.Char(36)
  createdById String     @db.Char(36)
  dueDate     DateTime?
  completedAt DateTime?
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt

  project       Project        @relation(fields: [projectId], references: [id], onDelete: Cascade)
  assignee      User?          @relation("TaskAssignee", fields: [assigneeId], references: [id], onDelete: SetNull)
  createdBy     User           @relation("TaskCreatedBy", fields: [createdById], references: [id])
  notifications Notification[]

  // Spec-required single-column indexes
  @@index([status])
  @@index([assigneeId])
  @@index([dueDate])

  // Composite indexes tuned to hot queries:
  //   - MEMBER task board ("my open tasks"): assigneeId + status
  //   - project board filtering: projectId + status
  @@index([assigneeId, status])
  @@index([projectId, status])
  @@index([createdById])
  @@map("tasks")
}

model RefreshToken {
  id         String    @id @default(uuid()) @db.Char(36)
  userId     String    @db.Char(36)
  tokenHash  String    @unique @db.VarChar(128)  // SHA-256 hex
  expiresAt  DateTime
  revokedAt  DateTime?
  replacedBy String?   @db.Char(36)              // id of the next token in rotation chain
  createdAt  DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([expiresAt])
  @@map("refresh_tokens")
}

model Notification {
  id        String           @id @default(uuid()) @db.Char(36)
  userId    String           @db.Char(36)
  type      NotificationType
  taskId    String?          @db.Char(36)
  payload   Json
  readAt    DateTime?
  createdAt DateTime         @default(now())

  user User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  task Task? @relation(fields: [taskId], references: [id], onDelete: SetNull)

  @@index([userId, readAt])
  @@index([userId, createdAt])
  @@index([taskId])
  @@map("notifications")
}
